Add end form tag to index.html

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <input type="text" search-bar="Type Search Here" required>
     <button type="submit">Submit</button>
     <button type="Feeling Lucky">Feeling Lucky</button>
+  </form>
 
     
